# docs/swagger.yaml
@@ -62,6 +62,8 @@ definitions:
         type: integer
       name:
         type: string
+      price:
+        type: number
       status:
         $ref: '#/definitions/models.AIModelStatus'
       updated_at:
@@ -264,6 +266,30 @@ definitions:
         type: object
     required:
     - body
+    type: object
+  test.TestCreateTaskRequest:
+    properties:
+      duration:
+        type: integer
+      image:
+        type: string
+      modelId:
+        type: integer
+      prompt:
+        type: string
+      ratio:
+        type: string
+    required:
+    - duration
+    - image
+    - modelId
+    - prompt
+    - ratio
+    type: object
+  test.TestTaskResponse:
+    properties:
+      task_id:
+        type: string
     type: object
   transaction.TransactionListItem:
     properties:
@@ -1420,6 +1446,33 @@ paths:
       summary: Retry a failed task
       tags:
       - tasks
+  /test/task:
+    post:
+      consumes:
+      - application/json
+      description: Create a test task and get a fixed task ID back.
+      parameters:
+      - description: Test task creation request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/test.TestCreateTaskRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/test.TestTaskResponse'
+              type: object
+      summary: Create a test task
+      tags:
+      - test
 securityDefinitions:
   Bearer:
     description: Type "Bearer" followed by a space and JWT token.
